--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(find_subcluster_gene)
 export(find_subcluster_signatures)
 export(find_subclusters)
 export(gene_sets_prepare)
+export(get_cols)
 export(get_gene_sets)
 export(irGSEA.integrate)
 export(irGSEA.score)
