--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: scsig
 Type: Package
-Title: functions for single cell differential signature analysis
+Title: Functions for single cell differential signature analysis
 Version: 0.1.0
 Author: Dongqiang Zeng
 Maintainer: The package maintainer <dongqiangzeng0808@gmail.com>
