--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,7 @@ export(irGSEA.score)
 export(mycopykat)
 export(pheatmap_average)
 export(random_strata_cells)
-export(sc_sig_plot)
+export(sc_fea_plot)
 export(sc_type_anno)
 export(standard_sc)
 export(training_sc_anno)
