--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,8 @@ LazyData: true
 RoxygenNote: 7.2.0
 Depends: 
     copykat,
-    mydb,
     scds,
+    IOBR,
     DoubletFinder,
     HGNChelper,
     dplyr,
