add heatmap functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(copykat_plus)
 export(dong_cell_anno)
 export(dong_dimplot)
 export(dong_find_markers)
+export(dong_heatmap)
 export(doublet_detect)
 export(enrich_cluster_degs)
 export(extract_sc_data)
