--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(find_subclusters)
 export(gene_sets_prepare)
 export(get_cols)
 export(get_gene_sets)
+export(get_msigdb_gs)
 export(irGSEA.integrate)
 export(irGSEA.score)
 export(mycopykat)
