--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(pheatmap_average)
 export(random_strata_cells)
 export(sc_fea_plot)
 export(sc_type_anno)
+export(sctype_score)
 export(standard_sc)
 export(training_sc_anno)
 export(unassign_cell)
