--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,6 @@ export(AddMt)
 export(add_pdata)
 export(copykat_plus)
 export(creat_folder)
-export(dong_cell_anno)
-export(dong_dimplot)
-export(dong_find_markers)
-export(dong_heatmap)
 export(doublet_detect)
 export(enrich_cluster_degs)
 export(extract_sc_data)
@@ -15,6 +11,7 @@ export(find_best_resolution)
 export(find_subcluster_gene)
 export(find_subcluster_signatures)
 export(find_subclusters)
+export(format_sig_from_df)
 export(gene_sets_prepare)
 export(get_cols)
 export(get_gene_sets)
@@ -25,8 +22,13 @@ export(mycopykat)
 export(pheatmap_average)
 export(random_strata_cells)
 export(sc_fea_plot)
-export(sc_type_anno)
+export(scpred_cell_anno)
+export(scsig_cell_anno)
+export(scsig_dimplot)
+export(scsig_find_markers)
+export(scsig_heatmap)
 export(sctype_score)
+export(sctyper_anno)
 export(standard_sc)
 export(training_sc_anno)
 export(unassign_cell)
