--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(gene_sets_prepare)
 export(get_cols)
 export(get_gene_sets)
 export(get_msigdb_gs)
+export(ggplotConfusionMatrix)
 export(irGSEA.integrate)
 export(irGSEA.score)
 export(mycopykat)
