--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,14 +4,13 @@ Title: Functions for single cell differential signature analysis
 Version: 0.1.0
 Author: Dongqiang Zeng, Qianqian Mao, Xiatong Huang
 Maintainer: The package maintainer <dongqiangzeng0808@gmail.com>
-Description: Summary of single cell sequencing data analysis functions.
+Description: Summary of single cell RNA sequencing data analysis functions.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.0
 Depends: 
     copykat,
-    scds,
     IOBR,
     DoubletFinder,
     HGNChelper,
